--- a/website/template.html
+++ b/website/template.html
@@ -21,7 +21,7 @@
   </header>
 
   <nav class="toc">
-    <h2>فهرس المحتويات</h2>
+    <h2>فهرس </h2>
     <ol>
       <li>Idea Overview</li>
       <li>Market Analysis</li>
